Add selective Apple POI map preview
